deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-admin
  labels:
    app.kubernetes.io/name: kube-admin
