deploy/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-admin-frontend
  namespace: kube-admin
spec:
  type: ClusterIP
  selector:
    app: kube-admin-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
